RESOLVED FIXED31811
Accidental calls to EventNames() instead of eventNames() waste CPU cycles
https://bugs.webkit.org/show_bug.cgi?id=31811
Summary Accidental calls to EventNames() instead of eventNames() waste CPU cycles
Jens Alfke
Reported 2009-11-23 12:53:28 PST
I just discovered five places in WebCore that accidentally call EventNames() when they mean eventNames(). The end result of the call will be the same, but the mistaken call is a constructor that creates about 100 AtomicString instances every time it's called.
Attachments
patch (5.19 KB, patch)
2009-11-23 14:16 PST, Jens Alfke
ggaren: review+
Jens Alfke
Comment 1 2009-11-23 14:16:21 PST
Geoffrey Garen
Comment 2 2009-11-23 14:20:02 PST
Comment on attachment 43734 [details] patch r=me
Jens Alfke
Comment 3 2009-11-23 14:26:02 PST
Committed revision 51321.
Note You need to log in before you can comment on or make changes to this bug.