Change incorrect calls to the constructor "EventNames()" to the correct accessor "eventNames()". This saves ~100 AtomicString lookups each time. https://bugs.webkit.org/show_bug.cgi?id=31811

Reviewed by Geoffrey Garen.

* dom/EventNames.h:  Make constructor private to prevent this from happening again.
* history/CachedFrame.cpp:
(WebCore::CachedFrameBase::restore):  EventNames() --> eventNames()
* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::checkValidity):  EventNames() --> eventNames()
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::stopLoading):  EventNames() --> eventNames()
(WebCore::FrameLoader::pageHidden):  EventNames() --> eventNames()
* page/DOMWindow.cpp:
(WebCore::DOMWindow::dispatchAllPendingUnloadEvents):  EventNames() --> eventNames()



Canonical link: https://commits.webkit.org/42750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51321 268f45cc-cd09-0410-ab3c-d52691b4dbfc